new homepage design, some flexboxes, images, shadows and more

--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -15,25 +15,69 @@
                 </ul>
             </div>
             <h1>Home - First Steps</h1>
-            <div class=flex-test>
-                <div class=boc id=fbox1 width=100%>
-                    <h2>Example Grid with inline-flex</h2>
+            <p>Welcome to this page, I hope you're having a good time!</p>
+            <hr />
+            <p>Would you like to look at some cities?</p>
+            <div class=city>
+                <div class=text>
+                    <h2>Berlin</h2>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                    sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                    magna aliquyam erat, sed diam voluptua. At vero eos et
+                    accusam et justo duo dolores et ea rebum. Stet clita kasd
+                    gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+                    amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+                    elitr, sed diam</p>
                 </div>
-                <div class=boc id=fbox2 width=65%>
-                    <p>List of random Cities in Europe</p>
-                    <ul>
-                        <li>Munich</li>
-                        <li>Berlin</li>
-                        <li>Madrid</li>
-                        <li>Barcelona</li>
-                    </ul>
+                <div class=pic>
+                    <img src="content/berlin.jpg">
                 </div>
-                <div class=boc id=fbox3 width=33%>
-                </div>
-                <div class=boc id=fbox5></div>
-                <div class=boc id=fbox11></div>
             </div>
-            <p>Welcome to this page, I hope you're having a good time</p>
+            <div class=city>
+                <div class=pic>
+                    <img src="content/munich.jpg">
+                </div>
+                <div class=text>
+                    <h2>Munich</h2>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                    sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                    magna aliquyam erat, sed diam voluptua. At vero eos et
+                    accusam et justo duo dolores et ea rebum. Stet clita kasd
+                    gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+                    amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+                    elitr, sed diam</p>
+                </div>
+            </div>
+            <div class=city>
+                <div class=text>
+                    <h2>Barcelona</h2>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                    sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                    magna aliquyam erat, sed diam voluptua. At vero eos et
+                    accusam et justo duo dolores et ea rebum. Stet clita kasd
+                    gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+                    amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+                    elitr, sed diam</p>
+                </div>
+                <div class=pic>
+                    <img src="content/barcelona.jpg">
+                </div>
+            </div>
+            <div class=city>
+                <div class=pic>
+                    <img src="content/madrid.jpg">
+                </div>
+                <div class=text>
+                    <h2>Madrid</h2>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                    sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                    magna aliquyam erat, sed diam voluptua. At vero eos et
+                    accusam et justo duo dolores et ea rebum. Stet clita kasd
+                    gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+                    amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+                    elitr, sed diam</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
