make the whole webpage more responsive, tinker with the navbar

--- a/exercise1/about.html
+++ b/exercise1/about.html
@@ -6,16 +6,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <div class="navbar row hamburger-menu">
+            <ul>
+                <li class="nav-element responsive-hidden-text col-s12"><a href=".">Hover me</a></li>
+                <li class="nav-element col-s2 col-2"><a href="index.html">Home</a></li>
+                <li class="nav-element col-s6 col-6">
+                    <a href="embed.html">Watch a local video</a></li>
+                <li class="nav-element col-s4 col-4"><a href="about.html">About Us</a></li>
+            </ul>
+        </div>
         <div class=main-content>
-            <div class=navbar> 
-                <ul>
-                    <li class=nav-element><a href="index.html">Home</a></li>
-                    <li class=nav-element><a href="embed.html">Watch a local video</a></li>
-                    <li class=nav-element><a href="about.html">About Us</a></li>
-                </ul>
+            <div class=row>
+                <h1>About</h1>
             </div>
-            <h1>About</h1>
-            <p>this is my project now - quite the simple page innit?</p>
+            <div class=row>
+                <p class="col-s12 col-5">this is my project now - quite the simple page innit?</p>
+                <p class="col-s12 col-6">I know I know, quite lackluster :(</p>
+            </div>
+            <div class=row>
+                <p class="col-12">But Time is running out, so thats that. Have a look at the other pages!</p>
+            </div>
         </div>
     </body>
 </html>
