--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -3,23 +3,33 @@
     <head>
         <title>SE_19 first steps</title>
         <link rel="stylesheet" type="text/css" href="style/style_main.css"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <div class="navbar row hamburger-menu">
+            <ul>
+                <li class="nav-element responsive-hidden-text col-s12"><a href=".">Hover me</a></li>
+                <li class="nav-element col-s2 col-2"><a href="index.html">Home</a></li>
+                <li class="nav-element col-s6 col-6">
+                    <a href="embed.html">Watch a local video</a></li>
+                <li class="nav-element col-s4 col-4"><a href="about.html">About Us</a></li>
+            </ul>
+        </div>
         <div class="main-content">
-            <div class=navbar> 
-                <ul>
-                    <li class=nav-element><a href="index.html">Home</a></li>
-                    <li class=nav-element><a href="embed.html">Watch a local video</a></li>
-                    <li class=nav-element><a href="about.html">About Us</a></li>
-                </ul>
+            <div class="row">
+                <h1>Home - First Steps</h1>
             </div>
-            <h1>Home - First Steps</h1>
-            <p>Welcome to this page, I hope you're having a good time!</p>
+            <div class="row">
+                <p>Welcome to this page, I hope you're having a good time!</p>
+            </div>
             <hr />
+            <div class="row">
             <p>Would you like to look at some cities?</p>
-            <div class=city>
-                <div class=text>
+            </div>
+            <div class="city row">
+                <div class="pic col-s12 col-6 col-l4">
+                    <img src="content/berlin.jpg">
+                </div>
+                <div class="text col-s12 col-6 col-l8">
                     <h2>Berlin</h2>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                     sed diam nonumy eirmod tempor invidunt ut labore et dolore
@@ -29,15 +39,12 @@
                     amet. Lorem ipsum dolor sit amet, consetetur sadipscing
                     elitr, sed diam</p>
                 </div>
-                <div class=pic>
-                    <img src="content/berlin.jpg">
-                </div>
             </div>
-            <div class=city>
-                <div class=pic>
+            <div class="city row">
+                <div class="pic col-s12 col-6 col-l4">
                     <img src="content/munich.jpg">
                 </div>
-                <div class=text>
+                <div class="text col-s12 col-6 col-l8">
                     <h2>Munich</h2>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                     sed diam nonumy eirmod tempor invidunt ut labore et dolore
@@ -48,8 +55,11 @@
                     elitr, sed diam</p>
                 </div>
             </div>
-            <div class=city>
-                <div class=text>
+            <div class="city row">
+                <div class="pic col-s12 col-6 col-l4">
+                    <img src="content/barcelona.jpg">
+                </div>
+                <div class="text col-s12 col-6 col-l8">
                     <h2>Barcelona</h2>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                     sed diam nonumy eirmod tempor invidunt ut labore et dolore
@@ -59,15 +69,12 @@
                     amet. Lorem ipsum dolor sit amet, consetetur sadipscing
                     elitr, sed diam</p>
                 </div>
-                <div class=pic>
-                    <img src="content/barcelona.jpg">
-                </div>
             </div>
-            <div class=city>
-                <div class=pic>
+            <div class="city row">
+                <div class="pic col-s12 col-6 col-l4">
                     <img src="content/madrid.jpg">
                 </div>
-                <div class=text>
+                <div class="text col-s12 col-6 col-l8">
                     <h2>Madrid</h2>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                     sed diam nonumy eirmod tempor invidunt ut labore et dolore
